--- a/index.html
+++ b/index.html
@@ -18,8 +18,17 @@
 
 <body>
     <h1>Nostr Counter v0.1</h1>
-    <input type="text" id="pubkeyInput" placeholder="Enter your pubkey">
+    <input type="text" id="inputPubkey" placeholder="Enter your pubkey">
     <p id="counter">Counter: 0</p>
+
+    <div class="card">
+        <ul id="cardList" class="list-group list-group-flush">
+            <!-- <li class="list-group-item">An item</li>
+            <li class="list-group-item">A second item</li>
+            <li class="list-group-item">A third item</li> -->
+        </ul>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
