add nip-07 login

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <h1>Nostr Counter v0.1</h1>
     <input type="text" id="inputPubkey" placeholder="Enter your pubkey">
+    <input type="button" id="btnLogin" value="Login with Extension" onclick="nostrLogin();">
     <p id="counter">Counter: 0</p>
 
     <div class="card">
